--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint src --ext .ts,.tsx",
     "test": "vitest run",
     "test:watch": "vitest",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prepublishOnly": "pnpm run build",
+    "publish": "npm publish"
   },
   "keywords": [],
   "author": "",
