--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "tsc --watch",
-    "build": "pnpm run clean && tsc && chmod 755 dist/index.js",
+    "build": "pnpm run clean && tsc && pnpm run copy-example",
+    "copy-example": "cp src/example-servers.json dist/example-servers.json",
     "inspect": "npx @modelcontextprotocol/inspector node dist/index.js",
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts,.tsx",
