fix: fix the commads with empty env in config

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "yamcp": "dist/index.js"
   },
   "scripts": {
-    "dev": "tsc --watch",
+    "dev": "tsx src/index.ts",
     "build": "pnpm run clean && tsc && pnpm run copy-example && chmod +x dist/index.js",
     "copy-example": "cp src/example-servers.json dist/example-servers.json",
     "inspect": "npx @modelcontextprotocol/inspector node dist/index.js",
