feat: Complete YAMCP UI Dashboard with full functionality - Add comprehensive React-based dashboard with shadcn/ui components - Implement working server management (add, delete, start/stop) - Implement working workspace management (create, delete, start/stop) - Add real-time data integration with YAMCP configuration files - Create modal forms for adding servers and workspaces with validation - Add advanced log viewer with file browsing and download capabilities - Implement Express API server with all CRUD endpoints - Add responsive design with modern UI/UX - Include CLI command 'yamcp ui' to launch dashboard - Support both stdio and SSE server types - Add comprehensive error handling and loading states

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "types": ["node"],
     "jsx": "react"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/ui/**/*"]
 }
