--- a/package.json
+++ b/package.json
@@ -1,59 +1,84 @@
 {
-  "name": "yamcp",
-  "version": "0.2.2",
-  "description": "Organize and manage your MCP servers in YAM (Yet Another MCP) workspaces - create dedicated workspaces for Research, Coding, Data Analysis, and more",
-  "types": "dist/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hamidra/yamcp"
-  },
+  "name": "yamcp-ui",
+  "version": "1.0.0",
+  "description": "Web-based dashboard for YAMCP (Yet Another MCP) - A Model Context Protocol workspace manager. Built on top of YAMCP by Hamid Alipour (https://github.com/hamidra/yamcp)",
+  "type": "module",
   "bin": {
-    "yamcp": "dist/index.js"
+    "yamcp-ui": "./bin/yamcp-ui.js"
   },
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "pnpm run clean && tsc && pnpm run copy-example && chmod +x dist/index.js",
-    "copy-example": "cp src/example-servers.json dist/example-servers.json",
-    "inspect": "npx @modelcontextprotocol/inspector node dist/index.js",
-    "clean": "rm -rf dist",
-    "lint": "eslint src --ext .ts,.tsx",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "start": "node dist/index.js",
-    "prepublishOnly": "pnpm run build"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "node server.mjs",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "ai",
+    "dashboard",
+    "ui",
+    "yamcp",
+    "workspace",
+    "server-management"
+  ],
+  "author": {
+    "name": "Elad Cohen",
+    "url": "https://www.linkedin.com/in/eladgocode/"
+  },
   "license": "MIT",
-  "devDependencies": {
-    "@modelcontextprotocol/inspector": "^0.10.2",
-    "@types/node": "^20.17.30",
-    "@types/prompts": "^2.4.9",
-    "@types/treeify": "^1.0.3",
-    "@types/uuid": "^9.0.8",
-    "eslint": "^9",
-    "typescript": "^5",
-    "vitest": "^1.0.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eladcandroid/yamcp-ui.git"
+  },
+  "homepage": "https://github.com/eladcandroid/yamcp-ui#readme",
+  "bugs": {
+    "url": "https://github.com/eladcandroid/yamcp-ui/issues"
+  },
+  "contributors": [
+    {
+      "name": "Hamid Alipour",
+      "url": "https://github.com/hamidra",
+      "role": "Creator of YAMCP"
+    }
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "peerDependencies": {
+    "yamcp": ">=0.2.0"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.9.0",
-    "boxen": "^8.0.1",
-    "chalk": "^5.4.1",
-    "commander": "^13.1.0",
-    "dotenv": "^16.4.7",
-    "enquirer": "^2.4.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.0.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "env-paths": "^3.0.0",
-    "net": "^1.0.2",
-    "open": "^10.1.2",
-    "ora": "^8.2.0",
-    "prompts": "^2.4.2",
-    "treeify": "^1.1.0",
-    "tsx": "^4.19.3",
-    "uuid": "^9.0.1",
-    "winston": "^3.17.0",
-    "zod": "^3.24.2"
+    "express": "^4.18.2",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.8.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
-  "files": [
-    "dist"
-  ]
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
+  }
 }
