Fix LogDetailsDialog to display full JSON content with proper height

--- a/package.json
+++ b/package.json
@@ -50,10 +50,18 @@
     "yamcp": ">=0.2.0"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.36.8",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-codemirror": "^4.23.12",
+    "ace-builds": "^1.41.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
@@ -62,8 +70,10 @@
     "express": "^4.18.2",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
