--- a/.npmignore
+++ b/.npmignore
@@ -1,30 +1,44 @@
-# Development files
-src/
-*.log
+# Development
+node_modules/
+.vscode/
+.idea/
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Demo assets (large files)
+assets/demo/
+
+# Source files
+src/
+
+# Config files
+.eslintrc.json
+.prettierrc
+tsconfig.json
+vite.config.ts
+
+# Git files
+.git/
+.gitignore
+
+# Misc
+*.log
+
 # IDE files
-.vscode/
-.idea/
 *.swp
 *.swo
 
 # OS files
-.DS_Store
 Thumbs.db
 
-# Git
-.git/
-.gitignore
-
-# Node modules (will be installed by npm)
-node_modules/
-
 # Build artifacts that shouldn't be in package
-tsconfig.node.json
-vite.config.ts
 postcss.config.js
 tailwind.config.js
 
