--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,4 +20,4 @@ EXPOSE 5173 8765
 # Run both frontend and backend-hub concurrently
 CMD ["concurrently", "-n", "frontend,backend-hub", "-c", "cyan,green", \
      "npm run dev -- --host 0.0.0.0", \
-     "pm2-runtime start /app/ecosystem.config.js"]
+     "pm2-runtime start /app/ecosystem.config.cjs"]
