feat: Add Python support to Docker container for MCP server testing
- Install python3 and py3-pip in Alpine container
- Install MCP package for testing functionality
- Infrastructure ready for MCP server execution via SSE endpoint

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:18-alpine
 
+# Install Python and pip for MCP server testing
+RUN apk add --no-cache python3 py3-pip
+
 # Install process manager for running multiple processes, PM2, and yamcp
 RUN npm install -g concurrently pm2 yamcp
 
